@@ -1,4 +1,6 @@
 vm-builder (0.9-0ubuntu2) UNRELEASED; urgency=low
+  [Johan Euphrosine]
+  * Fix exception when suite provided does not exist (LP: #281801) and provide unit test for it
 
   [ Nicolas Barcet ]
   * Added hint for more help (LP: #269323)
